force-app/main/default/objects/Apttus_Config2__ConfigUserPreferences__c/Apttus_Config2__ConfigUserPreferences__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration &amp; Pricing User preferences</description>
    <label>Config User Preferences</label>
</CustomObject>