force-app/main/default/objects/Apttus_Config2__ConfigUserPreferences__c/fields/Apttus_Config2__CategoryPreference__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CategoryPreference__c</fullName>
    <description>Category preferences for the user or profile. Enter a comma separated list of category names.</description>
    <label>Category Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>