force-app/main/default/objects/Apttus_Config2__ConfigUserPreferences__c/fields/Apttus_Config2__CollapseErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CollapseErrorMessage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>whether to collapse error message</description>
    <label>Collapse Error Message</label>
    <type>Checkbox</type>
</CustomField>