force-app/main/default/objects/Apttus_Config2__ConfigUserPreferences__c/fields/Apttus_Config2__CollapseInfoMessage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CollapseInfoMessage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to collapse info message</description>
    <label>Collapse Info Message</label>
    <type>Checkbox</type>
</CustomField>