force-app/main/default/objects/Apttus_Config2__ConfigUserPreferences__c/fields/Apttus_Config2__CollapseQuickAddFilter__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CollapseQuickAddFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the quick add filter will be collapsed by default.</description>
    <inlineHelpText>Indicates whether the quick add filter will be collapsed by default.</inlineHelpText>
    <label>Collapse Quick Add Filter</label>
    <type>Checkbox</type>
</CustomField>