force-app/main/default/objects/Apttus_Config2__ConfigUserPreferences__c/fields/Apttus_Config2__GroupsPerPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GroupsPerPage__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Groups Per Page</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>