force-app/main/default/objects/Apttus_Config2__ConfigUserPreferences__c/fields/Apttus_Config2__ItemsPerPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ItemsPerPage__c</fullName>
    <defaultValue>10</defaultValue>
    <description>The number of browsed or searched products to show in the product selection page. valid values are 5, 10, 15, 20 &amp; 25.</description>
    <inlineHelpText>The number of browsed or searched products to show in the product selection page. valid values are 5, 10, 15, 20 &amp; 25.</inlineHelpText>
    <label>Items Per Page</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>