force-app/main/default/objects/Apttus_Config2__ConfigUserPreferences__c/fields/Apttus_Config2__OptionItemsPerPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OptionItemsPerPage__c</fullName>
    <description>The number of displayed option products to show in the cart page. valid values are 5, 10, 15, 20 &amp; 25.</description>
    <inlineHelpText>The number of displayed option products to show in the cart page. valid values are 5, 10, 15, 20 &amp; 25.</inlineHelpText>
    <label>Option Items Per Page</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>