force-app/main/default/objects/Apttus_Config2__ConfigUserPreferences__c/fields/Apttus_Config2__SelectedComparisonProducts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SelectedComparisonProducts__c</fullName>
    <description>Used to maintain selection of compared products, between the Catalog and the Compare Features page.</description>
    <label>Selected Comparison Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>